--- a/style.css
+++ b/style.css
@@ -37,6 +37,16 @@
     padding: 100px;
 }
 
+.chosen-produkts{
+    display: flex;
+    flex-wrap: wrap;
+
+    border: #000000 solid 2px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 100px;
+}
+
 footer{
     position: relative;
     display: flex;
