Skapat fungerande kakor som sparar produkters värden (namn, mängd, tot-pris) samt skapat kort för varje produkt som sen ska fyllas genom firebase

--- a/style.css
+++ b/style.css
@@ -83,3 +83,11 @@ footer p {
     line-height: 1.5rem;
     margin: auto;
 }
+
+
+
+div{
+    border: solid 2px black;
+    margin: 1px;
+    padding: 5px;
+}
