--- a/style.css
+++ b/style.css
@@ -43,14 +43,20 @@ input[type="number"] {
     padding: 100px;
 }
 
-.chosen-produkts{
+.cart-items-container{
     display: flex;
     flex-wrap: wrap;
 
     border: #000000 solid 2px;
     margin-top: 10px;
     margin-bottom: 10px;
-    padding: 100px;
+    padding: 10px;
+}
+
+.divs{
+    margin-left: 10px;
+    min-height: 200px;
+    min-width: 200px;
 }
 
 .front{
